Use "java.io.InputStream.readAllBytes()" method to replace usage of "org.apache.commons.io.IOUtils.toByteArray(java.io.InputStream)" method